[tool.poetry]
name = "flaskapp"
version = "0.2.0"
description = "Flask app"
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"
gunicorn = "^20.1.0"
prometheus-client = "^0.11.0"
prometheus-flask-exporter = "^0.18.2"
Flask-Login = "^0.5.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "^0.4"
types-pytz = "^2021.1.0"
types-Flask = "^1.1.1"
pylint = "^2.9.3"
isort = "^5.9.1"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
black = "^21.6b0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

   